✨ Added BigDaddyG Assembly Specialist + Build Scripts
- Created bigdaddyg-asm.modelfile (x86/x64/ARM assembly specialist)
- Updated MODEL-VARIANTS.md (now 9 AI specialists)
- Fixed package.json (ASAR disabled for large models)
- Added build-and-cleanup.ps1 (automated build with cleanup)
- Added monitor-build.ps1 (real-time build progress)

Complete 114GB IDE with:
- 9 AI specialists (C/C++, C#, VB, Python, JS, Image, ASM, Cheetah, Supernova)
- RawrZ Security Platform integration
- Multi AI Aggregator (6 providers)
- All 20 AI model files included

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
       "package.json",
       "node_modules/**/*"
     ],
+    "asar": false,
     "win": {
       "target": [
-        "nsis",
-        "portable"
+        "nsis"
       ]
     },
     "nsis": {
