--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ini": "^6.0.0",
     "monaco-editor": "^0.54.0",
     "node-fetch": "^2.7.0",
+    "node-llama-cpp": "^3.14.2",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
