--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigdaddyg-ide",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "The world's first 100% agentic IDE with voice coding and self-healing",
   "main": "electron/main.js",
   "author": "BigDaddyG IDE Team",
@@ -22,12 +22,15 @@
     "build:installer": "electron-builder --win nsis",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "test": "npm --prefix electron test"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
     "electron-window-state": "^5.0.3",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ini": "^6.0.0",
     "monaco-editor": "^0.54.0",
     "node-fetch": "^2.7.0",
